[package]
name = "cargo-tangle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.1"
lazy_static = "1.4.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
pulldown-cmark = "0.9.2"
regex = "1.7.1"
